    - Fixed the call to par_findprog. path (aka val) was set to
      tmpdir. (Leolo)
    - Documented the CACHE name at the end of a self-executing
      PAR. (Leolo)
    - myldr/Makefile.PL now generates some dependencies for
      main.c (Leolo)
    - Applied patch from RT ticket. (tsee)
      https://rt.cpan.org/Ticket/Display.html?id=13959

[Changes for 0.92 - February 22, 2006]

* Bug Fixes

    - Now requiring Module::ScanDeps 0.56 which handles autouse
      correctly.
    - Now shipping with a correct SIGNATURE. (Which was broken for
      0.91.)

[Changes for 0.91 - February 13, 2006]

* Bug Fixes

    - Applied Alan Stewart's patch which fixes @ARGV pollution in
      daughter programs. See also 
      http://www.nntp.perl.org/group/perl.par/2152
    - Now mentioning the ENV var "PAR_VERBATIM" in the documentation.
      See also http://www.nntp.perl.org/group/perl.par/2196
    - Applied Malcolm Nooning's fix for the test suite. We used to get
      failed tests on Windows because of spaces in path names.
    - Applied Roderich Schupp's and Malcolm Nooning's patches to
      the test suite fixing problems with Cygwin.
    - Applied Vincent Ladeuil's patch to PAR::Filter::Bleach to return a
      true value for modules that loaded okay.
    - Changed 'PAR_BASE' in the Makefile.PL to 'SMUELLER'.

[Changes for 0.90 - November 25, 2005]

* Bug Fixes

    - When compiling with static libperl, myldr/ may fail "make"
      due to sha1.c not generated properly.

    - Pod stripping could fail on __DATA__ sections for files
      with CRLF line endings.

    - The documentation erroneously referred to the PAR_TEMP
      environment variable, whereas it should be PAR_GLOBAL_TEMP.

    - Compilation fixes for MinGW/MSYS.

[Changes for 0.89 - June 10, 2005]

* Bug Fixes

    - Stop static.c from pulling in Perl header files, otherwise
      parl.exe ends up depending on the Perl DLL on Win32 when
      Perl is built without PERL_IMPLICIT_SYS.
